If TBB isn't found, be graceful

--- a/jacobi.ipynb
+++ b/jacobi.ipynb
@@ -284,19 +284,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>500</th>\n",
-       "      <td>783.5624339058995 µs</td>\n",
+       "      <td>829.8033578321338 µs</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1000</th>\n",
-       "      <td>3.1832267800346012 ms</td>\n",
+       "      <td>3.3136179568246003 ms</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1500</th>\n",
-       "      <td>11.439273790456355 ms</td>\n",
+       "      <td>11.89440400712192 ms</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000</th>\n",
-       "      <td>20.493918196298182 ms</td>\n",
+       "      <td>21.38308871537447 ms</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -305,10 +305,10 @@
       "text/plain": [
        "                                           NumPy\n",
        "Grid points per dimension                       \n",
-       "500                         783.5624339058995 µs\n",
-       "1000                       3.1832267800346012 ms\n",
-       "1500                       11.439273790456355 ms\n",
-       "2000                       20.493918196298182 ms"
+       "500                         829.8033578321338 µs\n",
+       "1000                       3.3136179568246003 ms\n",
+       "1500                        11.89440400712192 ms\n",
+       "2000                        21.38308871537447 ms"
       ]
      },
      "execution_count": 6,
@@ -344,7 +344,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting jacobi_serial.pyx\n"
+      "Writing jacobi_serial.pyx\n"
      ]
     }
    ],
@@ -409,7 +409,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting jacobi_ops.pxd\n"
+      "Writing jacobi_ops.pxd\n"
      ]
     }
    ],
@@ -474,77 +474,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CPU serial</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Grid points per dimension</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>500</th>\n",
-       "      <td>1.3251253953203557 ms</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1000</th>\n",
-       "      <td>4.573245354928076 ms</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1500</th>\n",
-       "      <td>9.739785470999777 ms</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2000</th>\n",
-       "      <td>16.85156088974327 ms</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                      CPU serial\n",
-       "Grid points per dimension                       \n",
-       "500                        1.3251253953203557 ms\n",
-       "1000                        4.573245354928076 ms\n",
-       "1500                        9.739785470999777 ms\n",
-       "2000                        16.85156088974327 ms"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from jacobi_serial import jacobi_solver as jacobi_solver\n",
     "\n",
     "cpu_serial = run_benchmark(jacobi_solver, name=\"CPU serial\")\n",
     "cpu_serial.map(format_time).to_frame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -f jacobi_serial.pyx"
    ]
   },
   {
@@ -563,17 +509,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting jacobi_parallel.pyx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile jacobi_parallel.pyx\n",
     "\n",
@@ -599,7 +537,7 @@
     "    \n",
     "    cdef vector[int] indices = range(N+1, (M-1)*N-1)\n",
     "    \n",
-    "    copy(&data[0, 0], &data[-1, -1], temp.begin())\n",
+    "    copy(par, &data[0, 0], &data[-1, -1], temp.begin())\n",
     "    \n",
     "    cdef int iterations = 0\n",
     "    cdef float* T1 = &data[0, 0]\n",
@@ -613,7 +551,7 @@
     "        swap(T1, T2)\n",
     "\n",
     "    if (T2 == &data[0, 0]):\n",
-    "        copy(temp.begin(), temp.end(), &data[0, 0])\n",
+    "        copy(par, temp.begin(), temp.end(), &data[0, 0])\n",
     "\n",
     "    return iterations\n"
    ]
@@ -627,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,77 +575,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CPU parallel</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Grid points per dimension</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>500</th>\n",
-       "      <td>240.65955542027953 µs</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1000</th>\n",
-       "      <td>783.938598819077 µs</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1500</th>\n",
-       "      <td>1.6857213452458382 ms</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2000</th>\n",
-       "      <td>2.892688960768282 ms</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                    CPU parallel\n",
-       "Grid points per dimension                       \n",
-       "500                        240.65955542027953 µs\n",
-       "1000                         783.938598819077 µs\n",
-       "1500                       1.6857213452458382 ms\n",
-       "2000                        2.892688960768282 ms"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from jacobi_parallel import jacobi_solver as jacobi_solver\n",
-    "\n",
-    "cpu_parallel = run_benchmark(jacobi_solver, \"CPU parallel\")\n",
-    "cpu_parallel.map(format_time).to_frame()"
+    "cpu_serial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    from jacobi_parallel import jacobi_solver as jacobi_solver\n",
+    "    \n",
+    "    cpu_parallel = run_benchmark(jacobi_solver, \"CPU parallel\")\n",
+    "    cpu_parallel.map(format_time).to_frame()\n",
+    "except ImportError:  # handle if TBB is missing\n",
+    "    cpu_parallel = baseline.replace(baseline.values, pd.NA).rename(\"CPU parallel]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -f jacobi_parallel.pyx"
    ]
   },
   {
@@ -726,17 +622,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting jacobi_stdpar.pyx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile jacobi_stdpar.pyx\n",
     "\n",
@@ -820,6 +708,15 @@
     "\n",
     "gpu_stdpar = run_benchmark(jacobi_solver, \"GPU (nvc++ with -stdpar)\")\n",
     "gpu_stdpar.map(format_time).to_frame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm -f jacobi_stdpar.pyx"
    ]
   },
   {
